Questionable that euphemistic use is really a separate word. <shid#89584>

--- a/wiki/shid.wikitext
+++ b/wiki/shid.wikitext
@@ -1,20 +1,12 @@
-{{rfd}}
+
 ==English==
 ===Noun===
-[[Category:English nouns]]
 '''shid'''
 #a piece of [[firewood]] four [[foot|feet]] long.
 #a unit of length measuring four feet
-#''(variant spelling in which the <d> grapheme represents the English /t/ phoneme [[w:Flapping|flapped]] into an {{IPA|[&#638;]}} allophone)'' [[shit]]
 
 ====References====
-* [http://www.sizes.com/materls/shid.htm "shid"], accessed on 2005-05-03, which in turn cites:
-** Richard Hayes, ''The Negociator's Magazine: or, The most authentick account yet published of the Monies, Weights, and Measures of the Principal Places of Trade in the World.'', John Noon, London, 1740, page 206.
-
-===Interjection===
-[[Category:English interjections]]
-'''shid'''
-# {{euphemism}} [[shit]].
+* [http://www.sizes.com/materls/shid.htm "shid"], accessed on 2005-05-03, which in turn cites: Richard Hayes, ''The Negociator's Magazine: or, The most authentick account yet published of the Monies, Weights, and Measures of the Principal Places of Trade in the World.'', John Noon, London, 1740, page 206.
 
 ----
 
