expand, link to wikipedia <debug#99402>

--- a/wiki/debug.wikitext
+++ b/wiki/debug.wikitext
@@ -1,9 +1,11 @@
 ==English==
 
-===Verb===
+===Transitive verb===
+{{wikipediapar|debugging}}
 {{en-infl-reg-consonant|debug||g}}
-# To analyze or diagnose a problem to the point of determining a solution.
-
+# To [[remove]] a [[hidden]] [[electronic]] [[surveillance]] [[device]] from somewhere
+# To [[search]] for, and [[eliminate]] [[malfunctioning]] [[element]]s or [[error]]s in something, especially a [[computer]] [[program]]
+#(''US'') To remove [[insect]]s from somewhere
 ====Synonyms====
 *[[diagnose]]
 *[[troubleshoot]]
