--- a/wiki/antioxidant.wikitext
+++ b/wiki/antioxidant.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''antioxidant'''
 {{wikipedia}}
-#any [[chemical]] that acts to [[slow]] or [[prevent]] the [[oxidation]] of another chemical
+#any [[substance]] that acts to [[slow]] or [[prevent]] the [[oxidation]] of another chemical
 #in [[nutrition]], one of a group of [[vitamin]]s that act against the effects of [[free radical]]s
 
 ===Adjective===
