--- a/wiki/pixilated.wikitext
+++ b/wiki/pixilated.wikitext
@@ -1,4 +1,6 @@
-{{rfc}}
-Eccentric. Whimsical. Prankish.
-
-Slang: drunk.
+==English==
+===Adjective===
+'''pixilated'''
+# [[behaving]] in an [[eccentric]] manner
+# [[whimsicall
+# [[drunk]]
