--- a/wiki/thankee.wikitext
+++ b/wiki/thankee.wikitext
@@ -1,16 +1,9 @@
 ==English==
 
-===Interjection===
+===Verbal phrase===
 '''thankee'''
 
-# {{dated}} Variant of [[thank you]]
-
-===Quotations===
-
-'''1850:''' "Thankee, thankee, kind sir," he said, grasping my hand in both of his. <br/>
-&mdash; Charles Dickens, ''David Copperfield'', Chapter 46
-<br/>
-'''18??:''' "Thankee," said the knight politely, as he took a pinch and sneezed seven times so violently that his head fell off.<br/>
-&mdash; Louisa May Alcott, ''Little Women'', Chapter 12.
-<br/>
-'''18??:''' "Thankee, Sir." <br/> &mdash; Anthony Trolloppe, ''Harry Heathcote of Gangoil'', Chapter 10
+# ''(Dialect):'' Variant of [[thank you]]
+#:'''1850:''' "Thankee, thankee, kind sir," he said, grasping my hand in both of his. &mdash; [[w:Charles Dickens]], ''David Copperfield'', Chapter 46
+#:'''1868:''' "Thankee," said the knight politely, as he took a pinch and sneezed seven times so violently that his head fell off. &mdash; [[w:Louisa May Alcott]], ''Little Women'', Chapter 12.
+#:'''1874''' "Thankee, Sir." &mdash; [[w:Anthony Trolloppe]], ''Harry Heathcote of Gangoil'', Chapter 10
