cleanup <sex toy#99442>

--- a/wiki/sex_toy.wikitext
+++ b/wiki/sex_toy.wikitext
@@ -1,3 +1,7 @@
-The term ''Sex (or Adult) Toy'' is used to describe any object or device which is mainly used to facilitate sexual pleasure. Sex Toys are made by various synthetic material like rubber or silicone. A related term is ''Marital Aid'', often used as a euphemism for Sex Toys. 
-
-{{rfc}}
+==English==
+===Noun===
+{{wikipedia}}
+'''[[sex]] [[toy]]'''
+# any [[object]] or [[device]] that is [[primarily]] used in [[facilitating]] [[human]] [[sexual]] [[pleasure]]
+===See also===
+*[[marital aid]]
