--- a/wiki/answer.wikitext
+++ b/wiki/answer.wikitext
@@ -41,5 +41,8 @@
 
 [[Category:Communication]]
 
-[[it:answer]]
 [[Category:1000 English basic words]]
+
+[[gl:Answer]]
+[[it:answer]]
+[[fi:Answer]]
