robot  Adding:gl,it <another#41778>

--- a/wiki/another.wikitext
+++ b/wiki/another.wikitext
@@ -21,5 +21,8 @@ Note: As a pronoun another may have a possessive another's, pl. others, poss. pl
 *'''Hebrew''': [[אחר]]
 *'''Russian''': [[другой]]
 
-[[ru:Another]]
 [[Category:200 English basic words]]
+
+[[gl:Another]]
+[[it:another]]
+[[ru:Another]]
