robot  Adding:nl <anorexia#76155>

--- a/wiki/anorexia.wikitext
+++ b/wiki/anorexia.wikitext
@@ -5,3 +5,5 @@
 #Loss of [[appetite]], especially as a result of [[disease]]
 #[[anorexia nervosa]]
 [[Category:Greek derivations]]
+
+[[nl:anorexia]]
