robot  Adding:gl <antenna#38344>

--- a/wiki/antenna.wikitext
+++ b/wiki/antenna.wikitext
@@ -21,6 +21,7 @@
 [[Category:Etruscan derivations]]
 [[Category:English irregular plurals]]
 
+[[gl:Antenna]]
 [[it:antenna]]
 [[hu:Antenna]]
 [[pl:Antenna]]
