--- a/wiki/ochlocracy.wikitext
+++ b/wiki/ochlocracy.wikitext
@@ -1,1 +1,1 @@
-Form of government controlled by mob rule. Thought to be a degenerate state of democracy.
+Form of [[government]] controlled by mob rule. Thought to be a degenerate state of [[democracy]].
