robot  Adding:gl <anticipate#41795>

--- a/wiki/anticipate.wikitext
+++ b/wiki/anticipate.wikitext
@@ -30,4 +30,5 @@ Usage: To [[Anticipate]], [[Expect]]. These words agree in regarding some future
 *Finnish: [[odottaa]]
 *[[Ido]]: [[anticipar]]
 
+[[gl:Anticipate]]
 [[it:anticipate]]
