robot  Adding:et <PS#22122>

--- a/wiki/PS.wikitext
+++ b/wiki/PS.wikitext
@@ -1,1 +1,13 @@
-#REDIRECT [[PS]]
+==[[Wiktionary:List of acronyms and abbreviations|Abbreviation]]==
+
+#[[Post]] [[Scriptum]]
+----
+==Italian==
+===Abbreviation===
+
+# [[Pesaro]] (Italian town in Marche)
+# [[pubblica sicurezza]]
+
+[[et:PS]]
+[[pl:PS]]
+[[pt:PS]]
