robot  Adding:gl <antiquity#41807>

--- a/wiki/antiquity.wikitext
+++ b/wiki/antiquity.wikitext
@@ -17,4 +17,5 @@ plural '''Antiquities'''
 #:    Note: [In this sense, usually in the plural.] ``Heathen antiquities.'' --Bacon.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Antiquity]]
 [[it:antiquity]]
