robot  Adding:fi <page#50812>

--- a/wiki/page.wikitext
+++ b/wiki/page.wikitext
@@ -225,10 +225,12 @@
 
 #page, [[serving boy]]
 
+[[Category:1000 English basic words]]
+
 [[de:Page]]
 [[et:Page]]
 [[es:page]]
 [[fr:page]]
-[[pl:Page]]
 [[gu:Page]]
-[[Category:1000 English basic words]]
+[[pl:Page]]
+[[fi:Page]]
