robot  Adding:gl <anxious#41810>

--- a/wiki/anxious.wikitext
+++ b/wiki/anxious.wikitext
@@ -18,4 +18,5 @@ IPA: [[WEAE]] /ˈæŋˈʃəs/
 
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Anxious]]
 [[it:anxious]]
