robot  Adding:gl <anxiety#41809>

--- a/wiki/anxiety.wikitext
+++ b/wiki/anxiety.wikitext
@@ -17,4 +17,5 @@ plural '''anxieties'''
 
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Anxiety]]
 [[it:anxiety]]
