stub sort <in layman's terms#511109>

--- a/wiki/in_layman%27s_terms.wikitext
+++ b/wiki/in_layman%27s_terms.wikitext
@@ -1,3 +1,3 @@
 Putting something in '''layman's terms''' means describing a complex or technical issue in words that the average man on the street&mdash;someone without professional training in the subject area&mdash;could understand. According to the ''[[OED]]'', the term layman originally referred to the ''[[laity]]'', persons not in the [[clergy]], and has come to mean a person who is "non-expert...in relation...to a branch of knowledge." The phrase is common among [[English language]] speakers.
 
-{{stub}}
+{{lang-stub}}
