robot  Adding:fi <palace#4941>

--- a/wiki/palace.wikitext
+++ b/wiki/palace.wikitext
@@ -29,3 +29,5 @@ From French ''palais'' which comes from Latin ''palatium'' in reference to the P
 *Swedish: [[palats]] ''n''
 *[[Volapük]]: [[ledom]], [[regadom]]
 *Danish: [[palads]] ''n''
+
+[[fi:Palace]]
