robot  Adding:fi,gl <ape#37299>

--- a/wiki/ape.wikitext
+++ b/wiki/ape.wikitext
@@ -114,6 +114,8 @@ From Middle English, from Old English ''[[apa]]''.
 
 [[Category:Mammals]]
 
+[[gl:Ape]]
 [[it:ape]]
 [[nl:ape]]
 [[pl:Ape]]
+[[fi:Ape]]
