--- a/wiki/apartment.wikitext
+++ b/wiki/apartment.wikitext
@@ -14,4 +14,5 @@ IPA: [[WEAE]] /ʌˈpɑɹt.mɛnt/
 ====Joke====
 ''Why do they call them &ldquo;apartments&rdquo; if they are so close together?''
 
+[[gl:Apartment]]
 [[it:apartment]]
