robot  Adding:fr <apartheid#68072>

--- a/wiki/apartheid.wikitext
+++ b/wiki/apartheid.wikitext
@@ -11,7 +11,9 @@ An Afrikaans word meaning, literally, "separateness".
 ====Translations====
 *{{fi}}: [[rotuerottelu]], apartheid
 
-[[it:apartheid]]
-[[pl:Apartheid]]
 [[Category:Dutch derivations]]
 [[Category:Afrikaans derivations]]
+
+[[fr:apartheid]]
+[[it:apartheid]]
+[[pl:Apartheid]]
