--- a/wiki/palp.wikitext
+++ b/wiki/palp.wikitext
@@ -7,3 +7,5 @@ From {{F.}} ''[[palpe]]'', {{L.}} ''[[palpus]]''
 
 === Noun ===
 #an [[appendage]] found near the mouth in [[invertebrate]]s
+
+[[pl:Palp]]
