robot  Adding:gl <apostle#53821>

--- a/wiki/apostle.wikitext
+++ b/wiki/apostle.wikitext
@@ -8,5 +8,7 @@ from [[Greek]] ''apostolos'',"one sent forth"
 *French: apotre (there is a ^ over the ''o'' but I cant write it)
 *Spanish: apostol
 
-[[it:apostle]]
 [[Category:Greek derivations]]
+
+[[gl:Apostle]]
+[[it:apostle]]
