--- a/wiki/apophysis.wikitext
+++ b/wiki/apophysis.wikitext
@@ -5,3 +5,5 @@ Greek ''apo'' + ''phyein'' means '''to bring forth'''.
 ===Noun===
 '''apophysis'''
 # A natural outgrowth, swelling or enlargment, usually of an organism
+
+[[pl:Apophysis]]
