robot  Adding:gl <apologize#42346>

--- a/wiki/apologize.wikitext
+++ b/wiki/apologize.wikitext
@@ -16,4 +16,5 @@ IPA: [[WEAE]] /ʌˈpɑl.ə.ʤaɪz/
 ===Translations===
 * Finnish: [[puolustella]] (1), [[pyytää anteeksi]]
 
+[[gl:Apologize]]
 [[it:apologize]]
