--- a/wiki/appendix.wikitext
+++ b/wiki/appendix.wikitext
@@ -10,4 +10,6 @@
 *Romanian: [[addenda]] f, [[adaos]] n (1), [[apendice]] (2)
 
 [[Category:English irregular plurals]]
+
+[[gl:Appendix]]
 [[it:appendix]]
