robot  Adding:gl <appendicitis#65071>

--- a/wiki/appendicitis.wikitext
+++ b/wiki/appendicitis.wikitext
@@ -11,6 +11,7 @@
 ===External links===
 *[[w:appendicitis|Wikipedia article on appendicitis]].
 
+[[gl:Appendicitis]]
 [[it:appendicitis]]
 [[nl:appendicitis]]
 [[pl:Appendicitis]]
