robot  Adding:it <appellation#93267>

--- a/wiki/appellation.wikitext
+++ b/wiki/appellation.wikitext
@@ -4,3 +4,5 @@
 '''appellation'''
 #a [[name]], [[title]] or [[designation]]
 #the name of a [[wine]] that [[describe]]s its [[geographic]] [[origin]]
+
+[[it:appellation]]
