robot  Adding:gl <appearance#42510>

--- a/wiki/appearance.wikitext
+++ b/wiki/appearance.wikitext
@@ -27,4 +27,5 @@ IPA: [[WEAE]] /ʌˈpɪɹ.əns/
 
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Appearance]]
 [[it:appearance]]
