robot  Adding:gl <appear#42496>

--- a/wiki/appear.wikitext
+++ b/wiki/appear.wikitext
@@ -27,5 +27,6 @@ IPA: [[WEAE]] /ʌˈpɪɹ/
 
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Appear]]
 [[it:appear]]
 [[fi:Appear]]
