--- a/wiki/appeal.wikitext
+++ b/wiki/appeal.wikitext
@@ -21,4 +21,5 @@ IPA: [[WEAE]] /ʌˈpi.əl/
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 # In cricket, the act, by the [[fielding]] [[side]], of asking an umpire for a decision of whether a batsman is out or not.
 
+[[gl:Appeal]]
 [[it:appeal]]
