robot  Adding:gl <apparition#42360>

--- a/wiki/apparition.wikitext
+++ b/wiki/apparition.wikitext
@@ -20,5 +20,6 @@ IPA: [[WEAE]] /ˌæp.ɚˈɪʃ.n̩/, /ˌæp.ɚˈɪ.ʃən/
 *[[Russian]]: [[появление]], [[привидение]]
 
 [[et:Apparition]]
+[[gl:Apparition]]
 [[it:apparition]]
 [[pl:Apparition]]
