robot  Adding:fr <paper#19939>

--- a/wiki/paper.wikitext
+++ b/wiki/paper.wikitext
@@ -137,6 +137,8 @@
 '''to wallpaper'''
 ''See [[wallpaper]]''
 
+[[Category:1000 English basic words]]
+
+[[fr:paper]]
 [[pl:Paper]]
 [[fi:Paper]]
-[[Category:1000 English basic words]]
