--- a/wiki/truck.wikitext
+++ b/wiki/truck.wikitext
@@ -19,7 +19,6 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Chinese: [[huo4che1]]
 *Danish: 1. [[lastbil]],also as a slang [[truck]]
 *Dutch: [[vrachtauto]], [[vrachtwagen]]
 *Finnish: [[kuorma-auto]], [[kuormuri]]
@@ -29,7 +28,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*{{io}}: [[kamiono]]
+*Ido: [[kamiono]]
 *Italian: [[autocarro]] ''m'', [[camion]] ''m''
 *Lithuanian: [[sunkvežimis]] ''m''
 *Spanish: [[camión]], [[camioneta]]
