robot  Adding:fi <paprika#74626>

--- a/wiki/paprika.wikitext
+++ b/wiki/paprika.wikitext
@@ -22,8 +22,9 @@ Hungarian word '''paprika''' probably comes from south-slav ''[[papar]]'' ([[pep
 ===Noun===
 # paprika
 
-[[hu:paprika]]
-[[pl:Paprika]]
-
 [[Category:Hungarian nouns]]
 [[Category:Hungarian derivations]]
+
+[[hu:paprika]]
+[[pl:Paprika]]
+[[fi:Paprika]]
