robot  Adding:gl <approach#44157>

--- a/wiki/approach.wikitext
+++ b/wiki/approach.wikitext
@@ -50,5 +50,6 @@ Old English [[approchen]], [[aprochen]], Old French [[approcher]], LL. [[appropr
 {{checktrans}}
 {{webster}}
 
+[[gl:Approach]]
 [[it:approach]]
 [[fi:Approach]]
