robot  Adding:gl <apprentice#44156>

--- a/wiki/apprentice.wikitext
+++ b/wiki/apprentice.wikitext
@@ -18,4 +18,5 @@ Old English [[apprentice]], [[prentice]], Old French [[aprentis]], nom. of [[apr
 # To bind to, or put under the care of, a master, for the  purpose of instruction in a trade or business.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Apprentice]]
 [[it:apprentice]]
