robot  Adding:gl <apprehend#44150>

--- a/wiki/apprehend.wikitext
+++ b/wiki/apprehend.wikitext
@@ -28,4 +28,5 @@ To [[Apprehend]], [[Comprehend]]. These words come into comparison as describing
 # To be apprehensive; to fear.
 #: It is worse to apprehend than to suffer. --Rowe.
 
+[[gl:Apprehend]]
 [[it:apprehend]]
