robot  Adding:gl <appreciation#43620>

--- a/wiki/appreciation.wikitext
+++ b/wiki/appreciation.wikitext
@@ -14,6 +14,7 @@ IPA: [[WEAE]] /ʌ.pɹi.ʃiˈaɪ.ʃən/
 
 See also: [[appreciate]].
 
+[[gl:Appreciation]]
 [[it:appreciation]]
 [[pl:Appreciation]]
 [[ru:Appreciation]]
