--- a/wiki/appreciate.wikitext
+++ b/wiki/appreciate.wikitext
@@ -36,4 +36,6 @@ Latin [[appretiatus]], [[p.p.]] of [[appretiare]] to value at a price, appraise;
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
 [[Category:Positive words]]
+
+[[gl:Appreciate]]
 [[it:appreciate]]
