robot  Adding:gl <appointment#43501>

--- a/wiki/appointment.wikitext
+++ b/wiki/appointment.wikitext
@@ -22,4 +22,5 @@ IPA: [[WEAE]] /ʌˈpɔɪnt.mɛnt/
 
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Appointment]]
 [[it:appointment]]
