robot  Adding:gl <appoint#43500>

--- a/wiki/appoint.wikitext
+++ b/wiki/appoint.wikitext
@@ -20,4 +20,5 @@ IPA: [[WEAE]] /ʌˈpɔɪnt/
 # (Law) To direct, designate, or limit; to make or direct a new disposition of, by virtue of a power contained in a conveyance;&mdash;said of an estate already conveyed. --Burrill. Kent.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Appoint]]
 [[it:appoint]]
