robot  Adding:gl <apply#43495>

--- a/wiki/apply.wikitext
+++ b/wiki/apply.wikitext
@@ -19,6 +19,7 @@ IPA: [[WEAE]] /ʌˈplaɪ/
 #:    I applied myself to him for help. --Johnson.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+[[gl:Apply]]
 [[it:apply]]
 [[pt:Apply]]
 [[ru:Apply]]
