robot  Adding:gl <application#43492>

--- a/wiki/application.wikitext
+++ b/wiki/application.wikitext
@@ -18,6 +18,7 @@ IPA: [[WEAE]] /ˌæp.ləˈke.ʃən/
 *Finnish: [[sovellutus]], [[sovellus]]
 
 [[et:Application]]
+[[gl:Application]]
 [[it:application]]
 [[pl:Application]]
 [[sv:application]]
