robot  Adding:ru,it <applicable#91169>

--- a/wiki/applicable.wikitext
+++ b/wiki/applicable.wikitext
@@ -2,3 +2,6 @@
 === Adjective ===
 '''applicable'''
 # [[suitable]] for [[application]]; [[relevant]], [[appropriate]]
+
+[[it:applicable]]
+[[ru:Applicable]]
