'conciousness' -> 'consciousness';  -- [[User:Humanbot|Join and fix more!]] <borganism#324293>

--- a/wiki/borganism.wikitext
+++ b/wiki/borganism.wikitext
@@ -1,5 +1,5 @@
 {{POV_check}}
-A '''Borganism''' is a collective group of organisms which have been technologically augmented to the point of grotesqueness, resembling, even, a sort of techno-were undead creature, which is networked, producing a collective conciousness as an emergent phenomenon of the networking. The word derives from "[[cybernetic organism]]", which has spawned similar words such as [[cyborg]] and [[The Borg]], from the 1990's sf television show, [[Star Trek: The Next Generation]] in which The Borg are a synthetic civilization of borganisms highly networked together in a vast interspecies interstellar empire.
+A '''Borganism''' is a collective group of organisms which have been technologically augmented to the point of grotesqueness, resembling, even, a sort of techno-were undead creature, which is networked, producing a collective consciousness as an emergent phenomenon of the networking. The word derives from "[[cybernetic organism]]", which has spawned similar words such as [[cyborg]] and [[The Borg]], from the 1990's sf television show, [[Star Trek: The Next Generation]] in which The Borg are a synthetic civilization of borganisms highly networked together in a vast interspecies interstellar empire.
 
 The Borg were created for the show to illustrate the pratfalls and danger to individual [[liberty]] embodied in collectivism in the [[post-Soviet era]]. In this The Borg serve as [[warning fiction]]. However, later in the series, left-leaning writers attempted to write episodes that depicted individual borganisms in a sympathetic light.
 
