--- a/wiki/father.wikitext
+++ b/wiki/father.wikitext
@@ -26,13 +26,13 @@ From Middle English ''[[fader]]'', from Old English ''[[fæder]]''; cognates inc
 *Bulgarian: [[баща]] ''f''
 *[[Catalan]]: [[pare]] ''m''
 *CJKV Characters: [[父]]; [[禰]], [[祢]] (''deceased'')
-*Chinese: [[父]], [[爸爸]] ([[ba4ba]])
+*Chinese: [[父]], [[爸爸]] ([[bàba]])
 *Danish: [[far#Danish|far]] ''c'', [[fader]] ''c''
 *Czech: [[otec]], [[táta]], [[tatínek]], [[taťka]], [[fotr]] (''pejorative'')  ''m''
 *Dutch: [[vader]] ''m''
-*[[Ekspreso]]: [[patere]]
 *[[Esperanto]]: [[patro]]
 *Estonian: [[isa]]
+*Farsi: [[پدر|پِدَر]] (pedær)
 *Finnish: [[isä]]
 *French: [[père]] ''m''
 *[[Georgian]]: [[მამა]] (mama)
@@ -44,14 +44,13 @@ From Middle English ''[[fader]]'', from Old English ''[[fæder]]''; cognates inc
 *[[Ido]]: [[patro]]
 *Indonesian: [[ayah]], [[bapak]], [[ayahanda]]
 *[[Interlingua]]: [[patre]]
-*{{ga}}: [[athair]]
+*Irish: [[athair]]
 *Italian: [[padre]] ''m'' , [[babbo]] , [[tata]]  
 *Japanese: [[お父さん]] ([[おとうさん]], otōsan), [[父]] ([[ちち]], chichi)
 *Korean: [[아버지]] (abeoji)
 *Latin: [[pater]], [[patris]] ''m''
 *Macedonian: [[татко]] (tatko)
 *Central Sierra [[Miwok]]: [[ʔypýˑ-]]
-*[[Persian]]: [[پدر|پِدَر]] (pedær)
 *[[Pitjantjatjara]]: [[mama]], [[punari]]
 *Polish: [[ojciec]], ''m''
 *Portuguese: [[pai]] ''m''
