robot  Adding:gl <appropriate#44162>

--- a/wiki/appropriate.wikitext
+++ b/wiki/appropriate.wikitext
@@ -34,7 +34,8 @@ IPA: [[WEAE]] /ʌˈpɹo.pɹi.ɪt/
 ====Synonyms====
 * [[Felicitous]], [[Apt]], [[Fitting]]
 
+[[category:English heteronyms]]
+
+[[gl:Appropriate]]
 [[it:appropriate]]
 [[pl:Appropriate]]
-
-[[category:English heteronyms]]
