robot  Adding:pl,it <approximation#96887>

--- a/wiki/approximation.wikitext
+++ b/wiki/approximation.wikitext
@@ -6,3 +6,6 @@
 # an [[imprecise]] [[solution]] or [[result]] that [[adequate]] for a [[defined]] [[purpose]]
 #(''medicine'') the act of [[bringing]] [[together]] the [[edge]]s of [[tissue]] to be [[suture]]d
 [[category:English nouns]]
+
+[[it:approximation]]
+[[pl:Approximation]]
