--- a/wiki/paraphrase.wikitext
+++ b/wiki/paraphrase.wikitext
@@ -7,3 +7,5 @@
 ===Verb===
 '''to paraphrase'''  (''transitive'' or ''intransitive'')
 # to [[restate]] something as, or to [[compose]] a paraphrase
+
+[[pl:Paraphrase]]
