robot  Adding:nl <parallel#3848>

--- a/wiki/parallel.wikitext
+++ b/wiki/parallel.wikitext
@@ -40,6 +40,8 @@
 *[[parallelogram]]
 *[[unparalleled]]
 
-[[pl:Parallel]]
 [[Category:Greek derivations]]
 [[Category:1000 English basic words]]
+
+[[nl:parallel]]
+[[pl:Parallel]]
