robot  Adding:gl <aquatic#55569>

--- a/wiki/aquatic.wikitext
+++ b/wiki/aquatic.wikitext
@@ -15,4 +15,5 @@
 *Russian: [[акватический]] ''m'', [[акватическая]] ''f'', [[акватическое]] ''n''
 *Spanish: [[acuático]] ''m'', [[acuática]] ''f''
 
+[[gl:Aquatic]]
 [[pl:Aquatic]]
