robot  Adding:pl,gl,it <aptitude#90170>

--- a/wiki/aptitude.wikitext
+++ b/wiki/aptitude.wikitext
@@ -11,3 +11,7 @@ See ''[[apt]]''
 
 ====Translations====
 *German: [[Begabung]] ''f'' (1), [[Eignung]] ''f'' (2)
+
+[[gl:Aptitude]]
+[[it:aptitude]]
+[[pl:Aptitude]]
