robot  Adding:fr <Arabic#6361>

--- a/wiki/Arabic.wikitext
+++ b/wiki/Arabic.wikitext
@@ -57,7 +57,8 @@
 {{interwiktionary|code=ar}}
 *[http://www.websters-online-dictionary.org/definition/Arabic-english/ Arabic - English Dictionary]: from [http://www.websters-online-dictionary.org Webster's Online Dictionary] - the Rosetta Edition.
 
+[[fr:Arabic]]
+[[gu:Arabic]]
 [[hi:Arabic]]
 [[nl:Arabic]]
 [[pl:Arabic]]
-[[gu:Arabic]]
