robot  Adding:fi <particularly#71679>

--- a/wiki/particularly.wikitext
+++ b/wiki/particularly.wikitext
@@ -4,3 +4,5 @@
 # [[especially]]; to a [[great]] [[extent]]
 # [[specifically]], [[uniquely]] or [[individually]]
 # in [[detail]]; with [[regard]] to [[particulars]]
+
+[[fi:Particularly]]
