robot  Adding:hu <part#51206>

--- a/wiki/part.wikitext
+++ b/wiki/part.wikitext
@@ -32,7 +32,9 @@
 ==Translations==
 *German: [[halb]], [[teilweise]]
 
+[[Category:200 English basic words]]
+
 [[et:Part]]
+[[hu:part]]
 [[pl:Part]]
 [[ru:Part]]
-[[Category:200 English basic words]]
