robot  Adding:fi,gl,la <arc#37038>

--- a/wiki/arc.wikitext
+++ b/wiki/arc.wikitext
@@ -100,6 +100,9 @@
 *[[lampe à l'arc]]<!--arc-lamp-->
 *[[tir à l'arc]]<!--archery-->
 
+[[gl:Arc]]
 [[it:arc]]
+[[la:Arc]]
 [[hu:arc]]
+[[fi:Arc]]
 [[sv:arc]]
