robot  Adding:pl <arbitration#91176>

--- a/wiki/arbitration.wikitext
+++ b/wiki/arbitration.wikitext
@@ -3,3 +3,5 @@
 '''arbitration'''
 # the [[act]] or [[process]] of [[arbitrating]]
 # a process through which two or more [[parties]] use an [[arbitrator]] or [[arbiter]] in order to [[resolve]] a [[dispute]]
+
+[[pl:Arbitration]]
