robot  Modifying:sv,es <araña#41489>

--- a/wiki/ara%C3%B1a.wikitext
+++ b/wiki/ara%C3%B1a.wikitext
@@ -1,4 +1,3 @@
-[[sv:Araña]] [[es:Araña]]
 ==Spanish==
 ===Noun===
 '''araña''' ''f''
@@ -7,3 +6,6 @@
 
 ====Related terms====
 *[[araña de luces]]
+
+[[es:araña]]
+[[sv:araña]]
