robot  Adding:gl <archbishop#51686>

--- a/wiki/archbishop.wikitext
+++ b/wiki/archbishop.wikitext
@@ -28,4 +28,5 @@ From Latin '''[[archepiscopus]]''', from Greek '''[[archepiskopos]]''', from '''
 *[[prelate]]
 *[[primate]]
 
+[[gl:Archbishop]]
 [[it:archbishop]]
