robot  Adding:et <partisan#62348>

--- a/wiki/partisan.wikitext
+++ b/wiki/partisan.wikitext
@@ -15,3 +15,5 @@
 
 #Adherent to a party or faction; especially, having the character of blind, passionate, or unreasonable adherence to a party; as, blinded by partisan zeal.
 #Serving as a partisan in a detached command; as, a partisan officer or corps.
+
+[[et:Partisan]]
