--- a/wiki/today.wikitext
+++ b/wiki/today.wikitext
@@ -32,11 +32,11 @@ From Middle English < Old English '''[[todæge|tōdæge]]''', '''tō dæge''' (o
 *Bulgarian: [[днес]] (dnes), [[днеска]] (dnéska)
 *[[Cantonese]]: [[今日]] (gam<sup>1</sup>yat<sup>6</sup>)
 *[[Catalan]]: [[avui]], [[hui]]
-*Chinese: [[今天]] (jīntiān, [[jin1tian1]])
+*Chinese: [[今天]] (jīntiān)
 *Dutch: [[vandaag]]
 *[[Esperanto]]: [[hodiaŭ]]
 *Estonian: [[täna]]
-*{{fi}}: [[tänään]], [[tämä päivä]]
+*Finnish: [[tänään]], [[tämä päivä]]
 *French: [[aujourd'hui]]
 *[[Frisian]]: [[hjoed]]
 *Galician: [[hoxe]]
@@ -45,7 +45,7 @@ From Middle English < Old English '''[[todæge|tōdæge]]''', '''tō dæge''' (o
 *[[Guaraní]]: [[ko ára]]
 *Hebrew: [[היום]] (ha-yóm)
 *Hungarian: [[ma]]
-* {{io}} : [[hodie]]
+*Ido : [[hodie]]
 *Indonesian: [[hari ini]]
 *[[Interlingua]]: [[hodie]]
 *Italian: [[oggi]]
@@ -71,7 +71,7 @@ From Middle English < Old English '''[[todæge|tōdæge]]''', '''tō dæge''' (o
 *Swedish: [[idag]]
 *Tagalog: [[ngayon]]
 *[[Thai]]: [[วันนี้]] (wan nēē)
-*{{bo}}: [[ད་རིང་]] (da ring)
+*Tibetan: [[ད་རིང་]] (da ring)
 *[[Tupinambá]]: [[kó 'ara]]
 *[[Turkish]]: [[bu gün]]
 *[[Welsh]]: [[heddiw]]
