robot  Adding:gl <archive#71243>

--- a/wiki/archive.wikitext
+++ b/wiki/archive.wikitext
@@ -14,4 +14,5 @@ From {{F.}} '''''[[archives]]''''' < {{L.}} '''''[[archīva]]''''' < {{Gr.}} '''
 #to put into an archive.
 #:''I was planning on archiving the documents from 2001.''
 
+[[gl:Archive]]
 [[it:archive]]
