robot  Adding:gl <aristocracy#72080>

--- a/wiki/aristocracy.wikitext
+++ b/wiki/aristocracy.wikitext
@@ -6,4 +6,5 @@
 #A [[class]] of people [[considered]] (not normally [[universally]]) [[superior]] to others
 [[Category:English nouns]]
 
+[[gl:Aristocracy]]
 [[it:aristocracy]]
