--- a/wiki/argument.wikitext
+++ b/wiki/argument.wikitext
@@ -28,7 +28,9 @@
 *Swedish: [[argumentation]] (2,3), [[diskussion]] (2), argument (4)
 *[[Volapük]]: [[vödafeit]]
 
+[[Category:1000 English basic words]]
+
+[[gl:Argument]]
 [[it:argument]]
 [[nl:argument]]
 [[pl:Argument]]
-[[Category:1000 English basic words]]
