--- a/wiki/day.wikitext
+++ b/wiki/day.wikitext
@@ -33,7 +33,7 @@ Middle English < Old English '''[[dæg]]''' < Proto-Germanic '''[[*dagaz]]''' < 
 *[[Breton]]: [[deiz]] ''m'', [[deiz]]ioù ''pl''; [[devezh]] ''m'', [[devezh]]ioù ''pl''
 *Bulgarian: [[ден]] (den) ''m''
 *[[Catalan]]: [[dia]] ''m'' [[:ca:dia|(ca)]], [[jorn]] ''m''
-*Chinese: [[天]] (tiān, [[tian1]]), [[日]] (rì, [[ri4]])
+*Chinese: [[天]] (tiān), [[日]] (rì)
 *Croatian: [[dan#Croatian|dan]] ''m''
 *Czech: [[den]] ''m''
 *Danish: [[døgn]] (1,3), [[dag]] (2,4,5)
@@ -50,7 +50,7 @@ Middle English < Old English '''[[dæg]]''' < Proto-Germanic '''[[*dagaz]]''' < 
 *Hungarian: [[nap#Hungarian|nap]]
 *Icelandic: [[dagur]]
 *[[Ido]]: [[dio]]
-*{{id}}: [[hari]] (1,2)
+*Indonesian: [[hari]] (1,2)
 *[[Irish]]: [[lá]]
 *Italian: [[giorno]] ''m''
 *[[Interlingua]]: [[die]]
@@ -60,7 +60,7 @@ Middle English < Old English '''[[dæg]]''' < Proto-Germanic '''[[*dagaz]]''' < 
 *Latin: [[dies]] ''m/f'' ([[diei]])
 *Lithuanian: [[diena]]
 *[[Lojban]]: [[djedi]] (1,2), [[donri]] (3)
-*{{ms}}: [[hari]]
+*Malay: [[hari]]
 *Norwegian: [[dag]] ''c'' (2,4,5)
 *[[Ojibwe]]: [[giizhig]], [[giizhigoon]] ''pl''
 *[[Persian]]: [[روز]] (ruz)
