--- a/wiki/sky.wikitext
+++ b/wiki/sky.wikitext
@@ -24,7 +24,7 @@ Middle English '''sky''' (cloud, heaven, sky) from Old Norse '''sky''' (cloud) <
 *Arabic: [[سماء|سَمَاء]] ({{IPA|sámaː’}}) ''f'', [[سموات|سَمَوَات]] ({{IPA|samawáːt}}) ''pl''
 *[[Basque]]: [[zeru]]
 *Bulgarian: [[небе]] ''n'' (1,2,3)
-*Chinese: [[天]] (tiān, tian, [[tian1]])
+*Chinese: [[天]] (tiān, tian)
 *Czech: [[nebe]]  ''n''
 *Dutch: [[lucht]] ''m'', [[hemel]] ''m'', [[firmament]] ''n'' (2)
 *[[Esperanto]]: [[ĉielo]]
@@ -50,7 +50,7 @@ Middle English '''sky''' (cloud, heaven, sky) from Old Norse '''sky''' (cloud) <
 *Slovene: [[nebo]] ''n''
 *Spanish: [[cielo]] ''m'', [[firmamento]] ''m''
 *Swedish: [[himmel]] ''c'' (1,2,3,4), [[sky#Swedish|sky]] ''c'' (1,3)
-*{{bo}}: [[གནམ་]] (gnam)
+*Tibetan: [[གནམ་]] (gnam)
 *Welsh: [[wybr]], wybrau
 
 ----
