robot  Adding:gl,it <armament#96134>

--- a/wiki/armament.wikitext
+++ b/wiki/armament.wikitext
@@ -10,3 +10,6 @@
 # A body of forces equipped for war.
 # ''(Military & Naval):'' All the cannon and small arms collectively, with their equipments, belonging to a ship or a fortification.
 # Any equipment for resistance.
+
+[[gl:Armament]]
+[[it:armament]]
