--- a/wiki/father.wikitext
+++ b/wiki/father.wikitext
@@ -126,3 +126,4 @@ The translations below need to be checked by native speakers and inserted into t
 [[pl:Father]]
 [[fi:Father]]
 [[Category:1000 English basic words]]
+[[Category:Family]]
