robot  Adding:et <patron#46535>

--- a/wiki/patron.wikitext
+++ b/wiki/patron.wikitext
@@ -24,3 +24,5 @@ Old French [[patron]], reborrowed from Latin [[patronus]], derived from [[pater]
 
 ====Translations====
 *Dutch: [[bouwheer]] ''m'' (3), [[eigenaar]] ''m'' (3)
+
+[[et:Patron]]
