robot  Adding:gl <arrive#43699>

--- a/wiki/arrive.wikitext
+++ b/wiki/arrive.wikitext
@@ -27,6 +27,7 @@
 *Spanish: [[llegar]]
 *Swedish: [[anlända]], [[ankomma]] (a few situations, as when a train arrives to the station)
 
+[[gl:Arrive]]
 [[it:arrive]]
 [[pl:Arrive]]
 [[pt:Arrive]]
