robot  Adding:gl <artifact#74983>

--- a/wiki/artifact.wikitext
+++ b/wiki/artifact.wikitext
@@ -8,3 +8,5 @@ Latin ''ars, artis'' art, ''factum'' something made
 #* The dig produced many Roman '''artifacts'''.
 #A [[structure]] or [[feature]], [[visible]] only as a [[result]] of external [[action]] or experimental [[error]].
 #* The shadow on the lungs turned out to be an '''artifact''' of the X-ray process.
+
+[[gl:Artifact]]
