robot  Adding:fr <pedir#40042>

--- a/wiki/pedir.wikitext
+++ b/wiki/pedir.wikitext
@@ -20,5 +20,6 @@
 # looking for an answer to a question from someone else
 # request someone else to do something
 
+[[fr:pedir]]
 [[gl:Pedir]]
 [[hu:pedir]]
