--- a/wiki/road.wikitext
+++ b/wiki/road.wikitext
@@ -1,12 +1,11 @@
 ==English==
-
 ===Etymology===
 From Old English '''rad''' (riding, hostile incursion) < Proto-Germanic '''[[*ridanan]]''' (to ride) <  from Proto-Indo-European '''[[*reidh-]]''' (to ride).
 
 === Pronunciation ===
-*rōd, /rəʊd/, /<tt>r@Ud</tt>/
+*rōd, {{IPA|/rəʊd/}}, /<tt>r@Ud</tt>/
 *:'''Homophones''': [[rode]], [[rowed]]
-*:[[Rhymes:English:-əʊd|Rhymes: -əʊd]]
+*:{{IPA|[[Rhymes:English:-əʊd|Rhymes: -əʊd]]}}
 
 === Noun ===
 :A [[narrow]] strip of [[land]] made suitable for [[travel]] between [[places]]. Modern roads are usually paved to accommodate wheeled [[vehicle]]s.
@@ -22,7 +21,7 @@ The term road is used with the preposition on. Something is on the road, but in 
 |-
 |bgcolor="#FFFFE0" valign=top width=48% |
 {|
-*Arabic: [[طريق|طَرِيق]] (ʈaríːq) ''m'', [[طرق|طُرُق]] (ʈúruq) ''pl''
+*Arabic: [[طريق|طَرِيق]] {{IPA|(ʈaríːq)}} ''m'', [[طرق|طُرُق]] {{IPA|(ʈúruq)}} ''pl''
 *[[Blackfoot]]: [[mohsoko]]
 *[[Breton]]: [[hent]] ''m'', [[hentoù]] ''pl''
 *Chinese: [[路]] (lù)
@@ -35,7 +34,7 @@ The term road is used with the preposition on. Something is on the road, but in 
 *Finnish: [[tie]]
 *French: [[route]] ''f''
 *German: [[Straße]] ''f'', [[Straßen]] ''pl''
-*Greek: [[οδός]] (odos) ''f''
+*Greek: [[οδός]] (odós) ''f''
 *[[Guaraní]]: [[ape]] (t-), [[ape guasu]] (t-), [[apehũ]] (t-) ''(paved with asphalt, lit. "black road")''
 *Hebrew: [[כביש]] (kvíš) ''m''
 *Hungarian: [[út]], [[közút]]
