robot  Adding:pl,nl <asepsis#91633>

--- a/wiki/asepsis.wikitext
+++ b/wiki/asepsis.wikitext
@@ -3,3 +3,6 @@
 '''asepsis'''
 #The state of being free from [[sepsis]]
 #The [[process]] of [[removing]] [[pathogenic]] [[organism]]s or [[protecting]] against such organisms
+
+[[nl:asepsis]]
+[[pl:Asepsis]]
