--- a/wiki/infinite.wikitext
+++ b/wiki/infinite.wikitext
@@ -29,6 +29,7 @@ From Latin '''[[infinitus]]''', from negative prefix '''[[in-]]''', ''not'', + '
 ====Translations====
 *Arabic: la neha'ey لا نهائي
 *Chinese: [[无限]] (wú xiàn)
+*Dutch: [[oneindig]]
 *Finnish: [[ääretön]], [[päättymätön]]
 *[[Latin]]: [[infinitus]] ''m''
 *Swedish: [[oändlig]]
