robot  Adding:pl <Asiatic#91179>

--- a/wiki/Asiatic.wikitext
+++ b/wiki/Asiatic.wikitext
@@ -9,3 +9,5 @@
 
 ==== Usage Note ====
 '''Asiatic''' can hold a negative connotation, the term [[Asian]] is more widely accepted.
+
+[[pl:Asiatic]]
