--- a/wiki/pen.wikitext
+++ b/wiki/pen.wikitext
@@ -79,9 +79,11 @@
 ===Adjective===
 #beautiful
 
+[[Category:1000 English basic words]]
+
 [[ca:Pen]]
 [[es:pen]]
 [[hu:pen]]
 [[nl:pen]]
 [[pl:Pen]]
-[[Category:1000 English basic words]]
+[[zh:Pen]]
