robot  Adding:nl,pl,fr <penis#8155>

--- a/wiki/penis.wikitext
+++ b/wiki/penis.wikitext
@@ -123,5 +123,8 @@ This form is the nominative and genitive singular.
 *[[penilis]]
 
 [[de:Penis]]
+[[fr:penis]]
+[[nl:penis]]
+[[pl:Penis]]
 [[pt:Penis]]
 [[sv:penis]]
