--- a/wiki/immeasurable.wikitext
+++ b/wiki/immeasurable.wikitext
@@ -4,8 +4,9 @@
 # [[impossible]] to [[measure]]
 # [[vast]]
 ====Synonyms====
-# [[unmeasureable]], [[immensurable]]
-# [[unmeasureable]], [[immensurable]]
+# [[unmeasureable]]
+# [[immensurable]]
+
 ====Antonyms====
 #[[measurable]]
 ====Translations====
