robot  Adding:gl <aspect#59279>

--- a/wiki/aspect.wikitext
+++ b/wiki/aspect.wikitext
@@ -4,5 +4,6 @@
 '''aspect''' (''plural:'' [[aspects]])
 #the way something appears when viewed from a particular direction
 
+[[gl:Aspect]]
 [[it:aspect]]
 [[nl:aspect]]
