robot  Adding:pt,it <assess#91181>

--- a/wiki/assess.wikitext
+++ b/wiki/assess.wikitext
@@ -4,3 +4,6 @@
 # to [[give]] or [[charge]] with (as with [[penalties]] in [[sports]])
 # to [[determine]] the [[value]] of
 # to [[impose]] or [[subject]] to ([[taxation]] and [[legal]])
+
+[[it:assess]]
+[[pt:Assess]]
