robot  Adding:it <assume#33605>

--- a/wiki/assume.wikitext
+++ b/wiki/assume.wikitext
@@ -10,3 +10,5 @@
 *German: [[annehmen]] (1,2,3), [[aufnehmen]] (2), [[einnehmen]] (2)
 *Italian: [[presupporre]] (1), [[ritenere]] (1)
 *Portuguese: [[supor]] (1), [[assumir]] (1)
+
+[[it:assume]]
