robot  Adding:it <astringent#91186>

--- a/wiki/astringent.wikitext
+++ b/wiki/astringent.wikitext
@@ -7,3 +7,5 @@
 '''astringent'''
 # [[sharp]], [[caustic]] or [[severe]]
 # ([[medicine]]) having the [[effect]] of [[drawing]] [[tissue]]  together; [[styptic]]
+
+[[it:astringent]]
