robot  Adding:fi <asti#36041>

--- a/wiki/asti.wikitext
+++ b/wiki/asti.wikitext
@@ -35,3 +35,5 @@ The main word is in the [[illative]] case. Some adverbs appear in a form that ha
 
 #Asti (''province'')
 #Asti (''town'')
+
+[[fi:Asti]]
