robot  Adding:gl <perdurable#96425>

--- a/wiki/perdurable.wikitext
+++ b/wiki/perdurable.wikitext
@@ -9,3 +9,5 @@ From the Latin, via Old French and Old English; ''[[perdurare]]'' "to endure," f
 === Related Terms ===
 *[[perdurably]]
 *[[perdurability]]
+
+[[gl:Perdurable]]
