robot  Adding:et <perception#33675>

--- a/wiki/perception.wikitext
+++ b/wiki/perception.wikitext
@@ -11,4 +11,5 @@
 *[[Dutch]]: [[gewaarwording]] ''f'', [[perceptie]] ''f''
 *[[French]]: [[perception]] ''f''
 
+[[et:Perception]]
 [[pl:Perception]]
