--- a/wiki/periodic.wikitext
+++ b/wiki/periodic.wikitext
@@ -14,3 +14,5 @@ From {{Gr.}} [[περιοδος]], (a) way around (something), from [[περι]]
 ===See also===
 #[[period]]
 #[[periodic table]]
+
+[[pl:Periodic]]
