robot  Adding:fi,hi,nl,pl,et,fr,gu <perse#97350>

--- a/wiki/perse.wikitext
+++ b/wiki/perse.wikitext
@@ -7,3 +7,11 @@
 ====Synonyms====
 *[[perdé]]
 *[[perdette]]
+
+[[et:Perse]]
+[[fr:perse]]
+[[gu:perse]]
+[[hi:perse]]
+[[nl:perse]]
+[[pl:Perse]]
+[[fi:Perse]]
