robot  Adding:pl,nl <atrium#59973>

--- a/wiki/atrium.wikitext
+++ b/wiki/atrium.wikitext
@@ -6,5 +6,8 @@
 
 #A square hall lighted from above, into which rooms open at one or more levels.
 
-[[it:atrium]]
 [[Category:Etruscan derivations]]
+
+[[it:atrium]]
+[[nl:atrium]]
+[[pl:Atrium]]
