robot  Adding:pl <personification#95976>

--- a/wiki/personification.wikitext
+++ b/wiki/personification.wikitext
@@ -4,3 +4,5 @@
 # a [[person]], [[thing]] or [[name]] [[typifying]] a [[certain]] [[quality]] or [[idea]]; an [[embodiment]] or [[exemplification]]
 # a [[figure of speech]], [[prosopopeia]], in which an [[inanimate]] [[object]] or an [[abstraction]] is given [[human]] [[qualities]]
 # an [[artistic]] [[representation]] of an [[abstract]] [[quality]] as a human
+
+[[pl:Personification]]
