robot  Adding:pt <attraction#39584>

--- a/wiki/attraction.wikitext
+++ b/wiki/attraction.wikitext
@@ -15,6 +15,8 @@
 
 *[[Italian]]: [[attrazione]] ''f'' (1, 2, 3)
 
+[[Category:1000 English basic words]]
+
 [[it:attraction]]
 [[pl:Attraction]]
-[[Category:1000 English basic words]]
+[[pt:Attraction]]
