--- a/wiki/chat_up.wikitext
+++ b/wiki/chat_up.wikitext
@@ -5,4 +5,5 @@
 #To talk to (someone) [[flirtatious]]ly with the intention of establishing a [[romantic]] or [[sexual]] [[encounter]] or [[relationship]] with that person.
 
 ====Usage notes====
-*The subject of '''chat up''' is inserted between the components of this phrase, as in "to chat someone up".
+*The subject of '''chat up''' is inserted between the components of this phrase:
+*:''to chat someone up''
