robot  Adding:pl,it <attribution#91135>

--- a/wiki/attribution.wikitext
+++ b/wiki/attribution.wikitext
@@ -3,3 +3,6 @@
 ===Noun===
 '''attribution'''  (''plural:'' [[attributions]])
 # Gerund form of [[attribute]]; an explicit or formal acknowledgement of ownership or [[author]]ship.
+
+[[it:attribution]]
+[[pl:Attribution]]
