--- a/wiki/chat_up.wikitext
+++ b/wiki/chat_up.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Transitive verb phrase===
-'''to chat up''' ('''chats up''', '''chatting up''', '''chatted up''')
+'''to [[chat]] up''' ('''chats up''', '''chatting up''', '''chatted up''')
 
 #To talk to (someone) [[flirtatious]]ly with the intention of establishing a [[romantic]] or [[sexual]] [[encounter]] or [[relationship]] with that person.
 
