robot  Adding:pt,la,pl,nl <Augustus#93423>

--- a/wiki/Augustus.wikitext
+++ b/wiki/Augustus.wikitext
@@ -28,3 +28,8 @@ ah-GAHST-uhs
 *Portuguese: [[Augusto]] ''m''
 *Romanian: Augustus ''m''
 *Spanish: [[Augusto]] ''m''
+
+[[la:Augustus]]
+[[nl:augustus]]
+[[pl:Augustus]]
+[[pt:Augustus]]
