robot  Adding:fi,zh <august#117>

--- a/wiki/august.wikitext
+++ b/wiki/august.wikitext
@@ -128,4 +128,6 @@ From early Middle English '''August(us)''', re-Latinized from Old English '''[[A
 [[nl:August]]
 [[pl:August]]
 [[pt:August]]
+[[fi:August]]
 [[sv:August]]
+[[zh:August]]
