--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -259,6 +259,10 @@ From the [[Wolof]] suffix ''[[-kat]]''.
 
 [[Category:English words with multiple etymologies]]
 
+===Anagrams===
+*[[act]]
+*[[tac]]
+
 [[es:cat]]
 [[it:cat]]
 [[ja:cat]]
