robot  Adding:it <authoritative#89845>

--- a/wiki/authoritative.wikitext
+++ b/wiki/authoritative.wikitext
@@ -19,3 +19,5 @@
 #: ''his '''authoritativeness''' infused us all with fear''
 # the degree to which a thing is authoritative
 #: ''the book's '''authoritativeness''' is dubious''
+
+[[it:authoritative]]
