robot  Adding:fr,pt <autor#55145>

--- a/wiki/autor.wikitext
+++ b/wiki/autor.wikitext
@@ -6,8 +6,10 @@
 === Noun ===
 #[[author]]
 
+[[Category:German nouns]]
+
 [[de:Autor]]
+[[fr:Autor]]
 [[hr:Autor]]
 [[pl:Autor]]
-
-[[Category:German nouns]]
+[[pt:Autor]]
