/* Category:Russian pronouns */ <это#95225>

--- a/wiki/%D1%8D%D1%82%D0%BE.wikitext
+++ b/wiki/%D1%8D%D1%82%D0%BE.wikitext
@@ -1,9 +1,15 @@
 ==Russian==
+[[Category:Russian pronouns]]
+[[Category:Russian verbs]]
 ===Pronunciation===
-* [[Wiktionary:Pronunciation_key|IPA]]: /ˈɛta/
+* [[Wiktionary:Pronunciation_key|IPA]]: {{IPA|/ˈɛta/}}
 
-===Demonstrative Pronoun===
+===Demonstrative pronoun===
 '''это''' (éto)
-# [[this|This]]
 
-[[Category:Russian language]]
+# it is, this is, that is, those are
+#:Это—[[учитель]] (éto—učítel’) — ''This is the teacher.''
+#:Это—[[брат]] [[и]] [[сестра]] (éto—brat i sestrá) — ''They are brother and sister.''
+#:Это [[не]] [[чай]], [[а]] [[молоко]] (éto ne čáj, a molokó) — ''This is not tea, but milk.''
+# [[this]] ''(neuter)''
+#:[[я|Мне]] [[нравиться|нравится]] это [[молоко]] (mne nrávitsja éto molokó) — ''I like this milk.''
