robot  Adding:de <aviator#51384>

--- a/wiki/aviator.wikitext
+++ b/wiki/aviator.wikitext
@@ -4,5 +4,6 @@
 # (''[[obsolete|Obs.]]'') An [[experimenter]] in [[aviation]].
 # (''[[obsolete|Obs.]]'') A flying machine.
 
+[[de:aviator]]
 [[it:aviator]]
 [[pl:Aviator]]
