--- a/wiki/aviation.wikitext
+++ b/wiki/aviation.wikitext
@@ -5,5 +5,6 @@ The art or science of flying.
 ===See Also===
 *Wikipedia: [[w:Aviation|Aviation]]
 
+[[de:aviation]]
 [[it:aviation]]
 [[pl:Aviation]]
