/* Demonstrative pronoun */ <это#95225>

--- a/wiki/%D1%8D%D1%82%D0%BE.wikitext
+++ b/wiki/%D1%8D%D1%82%D0%BE.wikitext
@@ -7,9 +7,9 @@
 ===Demonstrative pronoun===
 '''это''' (éto)
 
-# it is, this is, that is, those are
+# it is, this is, that is, these are, those are
 #:Это—[[учитель]] (éto—učítel’) — ''This is the teacher.''
 #:Это—[[брат]] [[и]] [[сестра]] (éto—brat i sestrá) — ''They are brother and sister.''
 #:Это [[не]] [[чай]], [[а]] [[молоко]] (éto ne čáj, a molokó) — ''This is not tea, but milk.''
-# [[this]] ''(neuter)''
+# [[this]] ''(neuter form of [[этот]])''
 #:[[я|Мне]] [[нравиться|нравится]] это [[молоко]] (mne nrávitsja éto molokó) — ''I like this milk.''
