/* Demonstrative pronoun */ <это#95225>

--- a/wiki/%D1%8D%D1%82%D0%BE.wikitext
+++ b/wiki/%D1%8D%D1%82%D0%BE.wikitext
@@ -11,5 +11,5 @@
 #:Это—[[учитель]] (éto—učítel’) — ''This is the teacher.''
 #:Это—[[брат]] [[и]] [[сестра]] (éto—brat i sestrá) — ''They are brother and sister.''
 #:Это [[не]] [[чай]], [[а]] [[молоко]] (éto ne čáj, a molokó) — ''This is not tea, but milk.''
-# [[this]] ''(neuter form of [[этот]])''
+# [[this]] ''(neuter form of ''[[этот]]'')''
 #:[[я|Мне]] [[нравиться|нравится]] это [[молоко]] (mne nrávitsja éto molokó) — ''I like this milk.''
