robot  Adding:et <avocate#51403>

--- a/wiki/avocate.wikitext
+++ b/wiki/avocate.wikitext
@@ -1,3 +1,5 @@
 ==English==
 ===Verb (transitive)===
 To [[call]] [[off]] or [[away]]; to [[withdraw]]; to [[transfer]] to another tribunal.
+
+[[et:Avocate]]
