robot  Adding:et,sv,es <avril#54439>

--- a/wiki/avril.wikitext
+++ b/wiki/avril.wikitext
@@ -16,7 +16,10 @@
 *[[poisson d'avril]] - april fool
 *En avril, ne te découvre pas d'un fil.
 
+[[et:Avril]]
+[[es:avril]]
 [[fr:avril]]
 [[nl:avril]]
 [[ja:avril]]
 [[pl:Avril]]
+[[sv:avril]]
