/* Translations */  pt <chart#47611>

--- a/wiki/chart.wikitext
+++ b/wiki/chart.wikitext
@@ -24,6 +24,7 @@ From Latin ''[[carta]]'', '''chart'''
 {|
 <!--languages from N to Z go here-->
 *'''Russian''': [[чертёж]] /chertioj/, [[рисунок]] /risunok/, [[набросок]] /nabrosok/,
+*'''Portuguese''': [[carta]] [[náutica]]
 |}
 |}
 
@@ -39,6 +40,7 @@ From Latin ''[[carta]]'', '''chart'''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from N to Z go here-->
+*'''Portuguese''': [[diagrama]], [[gráfico]]
 |}
 |}
 
