--- a/wiki/panel.wikitext
+++ b/wiki/panel.wikitext
@@ -2,9 +2,9 @@
 ===Noun===
 '''panel''' ([[panels]])
 
-#A rectangular section of a surface
+#A (usually) rectangular section of a surface, or of a covering or of a wall, fence etc.
 #:''Behind the picture was a panel on the wall''
-#A group of people on a television or radio broadcast
+#A group of people gathered to judge, interview, discuss etc. as on a television or radio broadcast foe example.
 #:''Today's panel includes John Smith...''
 
 ====Derived terms====
@@ -29,3 +29,7 @@
 '''to panel''' ([[panelled]], [[panelling]]; US [[paneled]], [[paneling]])
 
 #to fit with panels
+
+===See also===
+*[[instrument panel]], [[control panel]]
+*[[panel beater]]
