/* Usage notes */ <chat up#99451>

--- a/wiki/chat_up.wikitext
+++ b/wiki/chat_up.wikitext
@@ -5,5 +5,6 @@
 #To talk to (someone) [[flirtatious]]ly with the intention of establishing a [[romantic]] or [[sexual]] [[encounter]] or [[relationship]] with that person.
 
 ====Usage notes====
-*The subject of '''chat up''' is inserted between the components of this phrase:
+*The subject of '''chat up''' is normally inserted between the components of this phrase:
 *:''to chat someone up''
+*:''Have you been chatting up my bird?''
