--- a/wiki/kitten.wikitext
+++ b/wiki/kitten.wikitext
@@ -9,17 +9,20 @@
 #A young [[rabbit]], [[rat]], [[hedgehog]], [[squirrel]] or [[badger]].
 
 ====Translations====
+{{top}}
 *'''Czech''': [[kotě]] ''n'' (1)
 *'''Finnish''': [[kissanpentu]] (1)
 *'''French''': [[chaton]] ''m'' (1)
 *'''German''': [[Kätzchen]] ''n'' (1)
-*'''Italian''': [[gattino]] ''m'' (1)
+*'''Italian''': [[gattino]] ''m'' (1), [[gattina]] ''f'' (1)
+{{mid}}
 *'''Polish''': [[kociak]] ''m'' (1)
 *'''Portuguese''': [[gatinho]] ''m'', [[gatinha]] ''f'' (1)
 *'''Slovak''': [[mača]] ''n'' (1), [[mačiatko]] ''n'' (1), [[mačička]] ''f'' (1), [[kocúrik]] ''m'' (1); [[zajačik]] ''m'' (2), [[zajko]] ''m'' (2)
 *'''Slovene''': [[mucek]] ''m'' (1), [[mucka]] ''f'' (1), [[zajček]] ''m'' (2)
 *'''Swedish''': [[kattunge]] ''c'' (1)
 *'''Spanish''': [[gatito]] ''m'' (1)
+{{bottom}}
 
 ====Related terms====
 *[[have kittens]]
