--- a/wiki/gatto.wikitext
+++ b/wiki/gatto.wikitext
@@ -4,6 +4,10 @@
 
 #(''irrespective of sex'') [[cat]]
 #(''male'') [[tom]], [[tomcat]]
+===Related terms===
+*[[gatta]]
+*[[gattino]]
+*[[gattina]]
 
 [[it:gatto]]
 [[ja:gatto]]
