full entry: v form, vbl n, n <viewing#78793>

--- a/wiki/viewing.wikitext
+++ b/wiki/viewing.wikitext
@@ -1,1 +1,16 @@
-#REDIRECT [[view]]
+==English==
+===Verb form===
+'''viewing'''
+ 
+#[[Present participle]] of '''to [[view]]'''.
+ 
+===Verbal noun===
+'''viewing''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to view'''.
+ 
+===Noun===
+'''viewing''' (''plural'' '''viewings''')
+
+#An instance of viewing something.
+#:''The agent took them to the property for a '''viewing'''.''
