/* Translations */ pt <view#19942>

--- a/wiki/view.wikitext
+++ b/wiki/view.wikitext
@@ -10,6 +10,7 @@
 *French: [[vue]] ''f''
 *German: [[Sicht]] ''f'', [[Ansicht]] ''f''
 *Italian: [[vista#Italian|vista]] ''f''
+*Portuguese: [[vista]]
 *Swedish: [[vy]]
 
 ===Transitive verb===
