robot  Adding:pl,pt,ja,gl,it <azzurro#98130>

--- a/wiki/azzurro.wikitext
+++ b/wiki/azzurro.wikitext
@@ -28,3 +28,9 @@ a<u>zz</u>urro, /adˈdzurro/, /<tt>ad"dzurro</tt>/
 *[[colore]]
 [[category:Italian adjectives]]
 [[category:Italian nouns]]
+
+[[gl:Azzurro]]
+[[it:azzurro]]
+[[ja:azzurro]]
+[[pl:Azzurro]]
+[[pt:Azzurro]]
