/* Translations */ pt <view#19942>

--- a/wiki/view.wikitext
+++ b/wiki/view.wikitext
@@ -23,6 +23,7 @@
 *French: [[regarder]]
 *German: [[sehen]], [[anschauen]]
 *Italian: [[guardare]]
+*Portuguese: [[ver]]
 
 ===Derived terms===
 *[[point of view]]
