v form, vbl n, n, adj, syns <ruling#78501>

--- a/wiki/ruling.wikitext
+++ b/wiki/ruling.wikitext
@@ -1,1 +1,29 @@
-#REDIRECT [[rule]]
+==English==
+===Verb form===
+'''ruling'''
+ 
+#[[Present participle]] of '''to [[rule]]'''.
+ 
+===Verbal noun===
+'''ruling''' (''[[uncountable]]'')
+ 
+#The action of the verb '''to rule'''.
+
+===Noun===
+'''ruling''' (''plural'' '''rulings''')
+
+#An [[order]] from someone in [[authority]].
+
+====Synonyms====
+*[[commandment]], [[edict]], [[order]], [[rule]]
+
+===Adjective===
+'''ruling'''
+ 
+#That rules or rule.
+#:''the ruling monarch''
+
+====Synonyms====
+*[[govern]]ing
+*[[reigning]] (''of a monarch'')
+*[[in power]] (''of a government; used after the noun'')
