/* Translations */ pt <hello#4803>

--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -55,6 +55,7 @@ This variant of [[hallo]] is sometimes falsely credited to [[w:Thomas Edison|Tho
 {|
 <!--Put translations for languages from J to Z here-->
 *Latin: [[salve]], [[ave]]
+*Portuguese: [[oi]]
 *Swahili: [[jambo]]
 *Spanish: [[hola]]
 *Swedish: [[hallå]], [[hej]], [[god dag]] (''formal'')
@@ -76,6 +77,7 @@ This variant of [[hallo]] is sometimes falsely credited to [[w:Thomas Edison|Tho
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Portuguese: [[alô]]
 *Swedish: [[hallå]], [[hej]], [[god dag]] (''formal'')
 *Ukrainian: [[алло]]
 |}
@@ -170,7 +172,6 @@ The translations below need to be checked by native speakers and separated into 
 *Norwegian: [[hei]]
 *Persian: [[سلام]]
 *Polish: [[cześć]]
-*Portuguese: [[olá]], [[oi]] (1); [[alô]] (1,2)
 *Romanian: [[bună ziua]] (1), [[salut]] (1), [[alo]] (2) 
 *Russian: [[здравствуйте]], [[привет]]! (1), [[алло]] (2)
 *Serbian: [[pazdrav]], [[bok]], [[zdravo]]
