robot  Adding:et <BCE#1791>

--- a/wiki/BCE.wikitext
+++ b/wiki/BCE.wikitext
@@ -6,3 +6,5 @@
 #Before the Common Era
 #:A "politically correct" way of saying [[BC]], "before Christ" often suffixed to dates, for example: "1045 BCE".
 #Before the Christian Era
+
+[[et:BCE]]
