--- a/wiki/ba.wikitext
+++ b/wiki/ba.wikitext
@@ -1,12 +1,47 @@
+==Translingual==
+'''Ba'''
+
+{{Chemistry}} Symbol for [[barium]].
+[[Category:Symbols]]
+
 ==English==
 
-==={{Abbreviation}}===
-'''BA'''
-# Bachelor of Arts ''(degree)''
-# British Airways
+===Etymology===
+Compare Old French ''[[baer]]'' to open the mouth; French ''[[bayer]]''.
 
-----
-==Portuguese==
-==={{Abbreviation}}===
-'''BA'''
-# [[Bahia]] (Brazilian state)
+===Intransitive verb===
+#''(Obsolete):'' To [[kiss]]. - [[Geoffrey Chaucer]].
+
+-----
+
+== Vietnamese ==
+
+=== [[Pronunciation]] ===
+*[[SAMPA]]: /ba/
+*[[SAMPROSA]]: /-[ba]/
+*[[International Phonetic Alphabet|IPA]]: /bā/
+
+=== Cardinal number ===
+#[[three]].
+
+====Related terms====
+*[[tháng ba]]
+*[[thứ ba]], [[ngày thứ ba]]
+
+===Noun===
+#[[father]].
+
+=== Adjective ===
+#a [[few#Pronoun|few]], a [[couple]], [[several]], a [[handful]] of.
+
+-----
+
+== [[Volapük]] ==
+
+=== [[Adverb]] ===
+#[[perhaps]].
+
+[[fr:Ba]]
+[[nl:ba]]
+[[ja:Ba]]
+[[pl:Ba]]
