--- a/wiki/schizophrenia.wikitext
+++ b/wiki/schizophrenia.wikitext
@@ -2,6 +2,9 @@
 ===Etymology===
 First attested [[w:1910|1910]], from [[Modern Latin]], from {{G.}} [[Schizophrenie]], coined by [[w:Eugen Bleuler|Eugen Bleuler]], from {{Gr.}} [[schizo-]], from [[skhizein]], "to [[split]]" + [[phren-]], "[[mind]]", from [[phrenos]], hence, "split mind." 
 
+===Pronunciation===
+*[[AHD]]: [skĭt′səfrēnēə] or [skĭt′səfrĕnēə]
+
 ===Noun===
 '''schizophrenia'''
 #A [[psychiatric]] [[diagnosis]] denoting a [[persistent]], often [[chronic]], mental illness variously affecting [[behavior]], [[thinking]], and [[emotion]].
