robot  Adding:fi <baby#3198>

--- a/wiki/baby.wikitext
+++ b/wiki/baby.wikitext
@@ -217,9 +217,11 @@ bāb'i, /ˈbeɪbi/, /"beIbi/
 *[[infant]] <!--(an even earlier [[age]])-->
 *[[toddler]] <!--(the next stage of [[development]])-->
 
+[[Category:1000 English basic words]]
+
 [[de:Baby]]
 [[it:baby]]
 [[nl:baby]]
 [[pl:Baby]]
 [[pt:Baby]]
-[[Category:1000 English basic words]]
+[[fi:Baby]]
